syntax = "proto3";

package user_role;

message UserProject {
  string id = 1;
  string user_id = 2;
  string project_id = 3;
  string created_at = 4;
  string updated_at = 5;
}

message UserProjectList {
  repeated UserProject user_project = 1;
}